<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iTMC2.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="no_playhistory">no playhistory</string>
    <string name="today">today</string>
    
    <string name="all">All</string>
    <string name="director_colon">"Director: "</string>
    <string name="actors_colon">"Cast: "</string>
    <string name="area_colon">"Country: "</string>
    <string name="tags_colon">"Genre: "</string>
    <string name="time_colon">"Date: "</string>
    <string name="all_specials">Featured</string>
    <string name="loading">Loading</string>
    <string name="channel_more">More</string>
    <string name="loading_video">"Loading"</string>
    <string name="find_media_searching">Searching…</string>
    <string name="filter">Filter</string>
    <string name="search_result_recommend_title">"Everyone's watching"</string>
    <string name="search_result_recommend_hint">"Couldn't find anything"</string>
    
    <string name="variety">综艺</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="update">Updated</string>
    <string name="play">Play</string>
    
     <string name="select_media_source">Select video source</string>
    <string name="qiyi">iQiyi</string>
    <string name="souhu">Souhu</string>
    <string name="tencent">Tencent</string>
    <string name="youku">Youku</string>
    <string name="netease">NetEase</string>
    <string name="yinyuetai">YinYueTai</string>
    <string name="wasu">Wasu</string>
    <string name="sina">Sina</string>
    <string name="pptv">PPTV</string>
    <string name="pps">PPS</string>
    <string name="funshion">Funshion</string>
    <string name="bestv">Bestv</string>
    <string name="icntv">iCNTV</string>
    <string name="fenghuang">iFeng</string>
    <string name="tudou">Tudou</string>
    <string name="lekan">Lekan</string>
    <string name="dianyingwang">M1905</string>
    <string name="letv">Letv</string>
    <string name="unknown_source">Unknown source</string>
    <string name="hint_can_not_get_source_info">"Can't find video source's info"</string>
    <string name="hint_without_selected_set">No source selected, finding source automatically…</string>
    
    <string name="cancel">Cancel</string>
    <string name="online">TV show</string>
</resources>
