<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/search_result_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.infthink.itmc.v2.widget.MediaView
            android:id="@+id/media_view"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/search_result_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/media_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_result_name_margin_bottom"
                android:shadowColor="@color/p_30_black"
                android:shadowDx="@integer/search_result_shadow_dx"
                android:shadowDy="@integer/search_result_shadow_dy"
                android:shadowRadius="@integer/search_result_shadow_radius"
                android:singleLine="true"
                android:textColor="@color/p_80_white"
                android:textSize="@dimen/text_size_30"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/actors_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_result_desc_margin_bottom"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/p_30_black"
                    android:shadowDx="@integer/search_result_shadow_dx"
                    android:shadowDy="@integer/search_result_shadow_dy"
                    android:shadowRadius="@integer/search_result_shadow_radius"
                    android:text="@string/actors_colon"
                    android:textColor="@color/p_80_white"
                    android:textSize="@dimen/text_size_26"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/actors"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shadowDx="@integer/search_result_shadow_dx"
                    android:shadowDy="@integer/search_result_shadow_dy"
                    android:shadowRadius="@integer/search_result_shadow_radius"
                    android:singleLine="true"
                    android:textColor="@color/p_80_white"
                    android:textSize="@dimen/text_size_26" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_result_desc_margin_bottom"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/p_30_black"
                    android:shadowDx="@integer/search_result_shadow_dx"
                    android:shadowDy="@integer/search_result_shadow_dy"
                    android:shadowRadius="@integer/search_result_shadow_radius"
                    android:text="@string/area_colon"
                    android:textColor="@color/p_80_white"
                    android:textSize="@dimen/text_size_26"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/area"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shadowDx="@integer/search_result_shadow_dx"
                    android:shadowDy="@integer/search_result_shadow_dy"
                    android:shadowRadius="@integer/search_result_shadow_radius"
                    android:singleLine="true"
                    android:textColor="@color/p_80_white"
                    android:textSize="@dimen/text_size_26" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tags_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_result_desc_margin_bottom"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/p_30_black"
                    android:shadowDx="@integer/search_result_shadow_dx"
                    android:shadowDy="@integer/search_result_shadow_dy"
                    android:shadowRadius="@integer/search_result_shadow_radius"
                    android:text="@string/tags_colon"
                    android:textColor="@color/p_80_white"
                    android:textSize="@dimen/text_size_26"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tags"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shadowDx="@integer/search_result_shadow_dx"
                    android:shadowDy="@integer/search_result_shadow_dy"
                    android:shadowRadius="@integer/search_result_shadow_radius"
                    android:singleLine="true"
                    android:textColor="@color/p_80_white"
                    android:textSize="@dimen/text_size_26" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_panel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/search_result_desc_margin_bottom"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/p_30_black"
                    android:shadowDx="@integer/search_result_shadow_dx"
                    android:shadowDy="@integer/search_result_shadow_dy"
                    android:shadowRadius="@integer/search_result_shadow_radius"
                    android:text="@string/time_colon"
                    android:textColor="@color/p_80_white"
                    android:textSize="@dimen/text_size_26"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shadowDx="@integer/search_result_shadow_dx"
                    android:shadowDy="@integer/search_result_shadow_dy"
                    android:shadowRadius="@integer/search_result_shadow_radius"
                    android:singleLine="true"
                    android:textColor="@color/p_80_white"
                    android:textSize="@dimen/text_size_26" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/search_result_ratingstar_margin_left"
                android:layout_marginTop="@dimen/search_result_ratingstar_margin_top"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <com.infthink.itmc.v2.widget.RatingView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffff7e00"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/list_divider" />

</LinearLayout>